package com.spaghetticodegang.trylater.recommendation.assignment;

public enum RecommendationAssignmentStatus {
    SENT,
    ACCEPTED,
}
